// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It adds borders 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root Table-withBorder-100"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-116 TableCell-withPadding-120 TableCell-withVerticalAlign-115 TableCell-withVerticalAlign-119 TableCell-withBorder-118"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds horizontal align 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            alignx="right"
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-50 TableCell-withPadding-54 TableCell-withVerticalAlign-49 TableCell-withVerticalAlign-53 TableCell-withoutFirstLastPadding-51 MuiTableCell-alignRight"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It adds vertical align 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-83 TableCell-withPadding-87 TableCell-withVerticalAlign-82 TableCell-withVerticalAlign-86 TableCell-withoutFirstLastPadding-84"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It does not remove first and last padding 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root TableRow-withStripes-207"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-215 TableCell-withPadding-219 TableCell-withVerticalAlign-214 TableCell-withVerticalAlign-218"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It renders 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-17 TableCell-withPadding-21 TableCell-withVerticalAlign-16 TableCell-withVerticalAlign-20 TableCell-withoutFirstLastPadding-18"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It uses medium padding 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-182 TableCell-withPadding-186 TableCell-withVerticalAlign-181 TableCell-withVerticalAlign-185 TableCell-withoutFirstLastPadding-183"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`It uses small padding 1`] = `
<div>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
      data-id="table"
    >
      <tbody
        class="MuiTableBody-root"
        data-id="table-body"
      >
        <tr
          class="MuiTableRow-root"
          data-id="table-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body TableCell-withPadding-149 TableCell-withPadding-153 TableCell-withVerticalAlign-148 TableCell-withVerticalAlign-152 TableCell-withoutFirstLastPadding-150"
            data-id="table-cell"
          >
            Hello world
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
